--- a/resources.qrc
+++ b/resources.qrc
@@ -16,5 +16,9 @@
         <file>sprites/character/Character2_0002.png</file>
         <file>sprites/character/Character2_0003.png</file>
         <file>sprites/character/Character2_0004.png</file>
+        <file>sprites/enemies/Roomba_0.png</file>
+        <file>sprites/enemies/Roomba_1.png</file>
+        <file>sprites/character/Character_0005.png</file>
+        <file>sprites/enemies/DeathRoomba.png</file>
     </qresource>
 </RCC>
