--- a/resources.qrc
+++ b/resources.qrc
@@ -21,5 +21,15 @@
         <file>sprites/character/Character_0005.png</file>
         <file>sprites/enemies/DeathRoomba.png</file>
         <file>levels/level_test.json</file>
+        <file>sprites/Checkpoint.png</file>
+        <file>sprites/CheckpointGreen.png</file>
+        <file>sprites/finish/BHSpawn_0000_Calque-1.png</file>
+        <file>sprites/finish/BHSpawn_0001_Calque-2.png</file>
+        <file>sprites/finish/BHSpawn_0002_Calque-3.png</file>
+        <file>sprites/finish/BHSpawn_0003_Calque-4.png</file>
+        <file>sprites/finish/BlackHole_0000_Calque-3.png</file>
+        <file>sprites/finish/BlackHole_0001_Calque-2.png</file>
+        <file>sprites/finish/BlackHole_0002_Calque-1.png</file>
+        <file>sprites/finish/BlackHole_0003_Calque-4.png</file>
     </qresource>
 </RCC>
