--- a/resources.qrc
+++ b/resources.qrc
@@ -47,5 +47,6 @@
         <file>sprites/Bolt.png</file>
         <file>sprites/Platformx2.png</file>
         <file>sprites/Platformx3.png</file>
+        <file>sprites/Brick.png</file>
     </qresource>
 </RCC>
