--- a/gamewindow.ui
+++ b/gamewindow.ui
@@ -47,6 +47,21 @@
       </item>
       <item>
        <widget class="QPushButton" name="levelTest">
+        <property name="minimumSize">
+         <size>
+          <width>250</width>
+          <height>70</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>Candara</family>
+          <pointsize>20</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="text">
          <string>Niveau Test</string>
         </property>
