--- a/resources.qrc
+++ b/resources.qrc
@@ -20,7 +20,6 @@
         <file>sprites/enemies/Roomba_1.png</file>
         <file>sprites/character/Character_0005.png</file>
         <file>sprites/enemies/DeathRoomba.png</file>
-        <file>levels/level_test.json</file>
         <file>sprites/Checkpoint.png</file>
         <file>sprites/CheckpointGreen.png</file>
         <file>sprites/finish/BHSpawn_0000_Calque-1.png</file>
@@ -54,5 +53,9 @@
         <file>sprites/enemies/Buzzer_2.png</file>
         <file>sprites/enemies/Buzzer_3.png</file>
         <file>sprites/enemies/DeathBuzzer.png</file>
+        <file>sprites/GroundInner.png</file>
+        <file>sprites/GroundLeft.png</file>
+        <file>sprites/GroundRight.png</file>
+        <file>levels/level_test.json</file>
     </qresource>
 </RCC>
